--- a/members/templates/index.html
+++ b/members/templates/index.html
@@ -15,11 +15,19 @@
             width:100%;
 
             border-bottom:1px solid lightgray;
+
+            display: flex;
+            align-items: center;
+
+            padding:10px;
         }
 
         .navbar div{
             font-family: Verdana, Geneva, Tahoma, sans-serif;
             font-size: 15pt;
+
+            width: fit-content;
+            height: fit-content;
         }
 
         .content{
